[tool.poetry]
name = "geodistpy"
version = "0.1.3"
description = "For fast geodesic calculations"
authors = ["Pawan <pawanjain.432@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["geodesic", "harvesine"]
packages = [{include = "geodistpy"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: GIS"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
geographiclib = "^2.0"
scipy = [
    { version = "^1.14.1", python = ">=3.10,<3.13" },
    { version = "^1.13.1", python = "^3.9" }
]
numba = "^0.60.0"
numpy = "^1.26.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.40"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.3.0"

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples'
ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate'

[tool.coverage.run]
omit = [
    "tests/*",
]