[tool.poetry]
name = "geodistpy"
version = "0.2.1"
description = "For fast geodesic calculations"
authors = ["Pawan <pawanjain.432@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["geodesic", "harvesine"]
packages = [{include = "geodistpy"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: GIS"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
geographiclib = "^2.1"
scipy = "^1.16.1"
numba = "^0.64.0"
numpy = "^2.4.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.poetry.group.lint.dependencies]
black = "^26.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.7.2"
mkdocstrings = "^1.0.3"
mkdocstrings-python = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.3.0"

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples'
ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate'

[tool.coverage.run]
omit = [
    "tests/*",
]