[tool.poetry]
name = "geodistpy"
version = "1.1.1"
description = "For fast geodesic calculations"
authors = ["Pawan <pawanjain.432@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["geodesic", "harvesine"]
packages = [{include = "geodistpy"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.urls]
homepage = "https://pawangeek.github.io/geodistpy/"
documentation = "https://pawangeek.github.io/geodistpy/"
source = "https://github.com/pawangeek/geodistpy"
download = "https://github.com/pawangeek/geodistpy/releases"
tracker = "https://github.com/pawangeek/geodistpy/issues"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
geographiclib = "^2.1"
scipy = "^1.16.1"
numba = "^0.64.0"
numpy = "^2.4.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.poetry.group.lint.dependencies]
black = "^26.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
zensical = "^0.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.3.0"

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples'
ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate'

[tool.coverage.run]
omit = [
    "tests/*",
]
